--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,20 @@
 {
-    "name": "zendframework/skeleton-application",
-    "description": "Skeleton Application for ZF2",
-    "license": "BSD-3-Clause",
-    "keywords": [
-        "framework",
-        "zf2"
-    ],
-    "homepage": "http://framework.zend.com/",
-    "require": {
-        "php": ">=5.3.3",
-        "zendframework/zendframework": "~2.4.11"
-    },
-    "autoload": {
-        "psr-0": { "Album": "module/Album/src" }
+  "name": "zendframework/skeleton-application",
+  "description": "Skeleton Application for ZF2",
+  "license": "BSD-3-Clause",
+  "keywords": [
+    "framework",
+    "zf2"
+  ],
+  "homepage": "http://framework.zend.com/",
+  "require": {
+    "php": ">=5.3.3",
+    "zendframework/zendframework": "~2.4.11"
+  },
+  "autoload": {
+    "psr-0": {
+      "Album": "module/Album/src",
+      "User": "module/User/src"
     }
+  }
 }
