--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   ],
   "homepage": "http://framework.zend.com/",
   "require": {
-    "php": ">=5.3.3",
+    "php": "^5.6 || ^7.0",
     "zendframework/zendframework": "~2.4.11"
   },
   "autoload": {
@@ -16,5 +16,10 @@
       "Album": "module/Album/src",
       "User": "module/User/src"
     }
+  },
+  "require-dev": {
+    "zendframework/zend-component-installer": "^1.1",
+    "zendframework/zend-developer-tools": "1.0.*",
+    "san/san-session-toolbar": "0.6.*"
   }
 }
